Introduce Debug and FrameGraph Overlays
- Modified `DebugOverlay` with performance metrics, hardware/software specs, and chunk/render stats display.
- Implemented `FrameGraphOverlay` for real-time visualization of frame graph passes and resources.
- Enhanced `PipelineManager` with role-based terrain pipeline management and new APIs.
- Refactored `PipelineState` and `FrameGraph` for blend setup and execution improvements.
- Deprecated outdated shader parsing methods (Will be replaced by a new sandboxed jar loading method (more flexible pipelines than Iris)).
- Optimized memory management for rendering pipelines and resources with refined state tracking.
- Refactoring entirely the world renderer (It was long :( ) to enhance readability and future pipeline updates (You can now bind a custom pipeline on it)
- Adding render state snapshot to avoid verbose on the world renderer and keep it clean

This update enhances debugging and rendering management capabilities, pushing the graphics engine towards more modular development.